[tool.poetry]
name = "assistants-api-playground"
version = "0.1.0"
description = ""
authors = ["Shingo Yamazaki <shingoyamazaki00@gmail.com>"]
readme = "README.md"
packages = [{include = "assistants_api_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
